tests/compile_fail/no_comparison_1.stderr
error: Expected comparison operator (<, <=, >, >=, ==, !=)
 --> $DIR/no_comparison_1.rs:2:13
  |
2 | fn main() { chain!(1); }
  |             ^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
